# bruna

./: .gitignore  Dockerfile  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
client/scripts/: start-local.sh
scripts/: preprocess.py
server/: docker-compose-prod.yml  docker-compose.yml  requirements.txt
server/scripts/: preprocess.py
server/src/: config.yml
server/src/agents/: base.py  crisis.py
server/tests/: test_text_gen.py
src/: service.py  settings.py
src/agents/: base.py  chat.py  chat_crisis.py  chat_info.py  crisis.py  info.py  report  report.py
src/db/: __init__.py  controllers.py  models.py
tests/: conftest.py  test_text_gen.py
